# slovnik

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/versions/: 20260702_0001_initial_schema.py
backend/app/: config.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: learning.py  profiles.py  quizzes.py  vocabulary.py
backend/app/services/: learning_service.py  profile_service.py  quiz_service.py  vocabulary_service.py
backend/tests/: conftest.py  test_config.py  test_learning.py  test_profiles.py  test_quizzes.py  test_schema.py  test_vocabulary.py
docs/: product-state.md
docs/superpowers/plans/: 2026-07-02-serbian-vocabulary-trainer-mvp.md  2026-07-06-vocabulary-importer.md
docs/superpowers/specs/: 2026-07-06-vocabulary-importer-design.md
docs/testing/: mvp-manual-test.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/src/: App.vue  main.ts  router.ts  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AppShell.vue  EmptyState.vue  FeedbackPanel.vue  SessionProgress.vue  WordCard.vue
frontend/src/i18n/: messages.ts
frontend/src/stores/: session.ts
frontend/src/views/: DashboardView.vue  NewWordsView.vue  QuizView.vue  ResultsView.vue  ReviewView.vue  UserAccessView.vue  VocabularyListView.vue  WordEditorView.vue
frontend/tests/e2e/: core-flow.spec.ts
frontend/tests/unit/: app-shell.test.ts  dashboard.test.ts  quiz.test.ts  session.test.ts  vocabulary.test.ts  word-editor.test.ts
